infra/k8s/auth-depl.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
# RabbitMQ Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: http
---
# RabbitMQ Service
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-srv
  namespace: auth
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: http
      port: 15672
      targetPort: 15672
  type: ClusterIP
---
# Auth Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: ezeedge/ms-auth:latest
          ports:
            - containerPort: 3000
---
# Auth Service
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
  namespace: auth
spec:
  selector:
    app: auth
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
