infra/k8s/mailing-depl.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: mailing
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailing-depl
  namespace: mailing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailing
  template:
    metadata:
      labels:
        app: mailing
    spec:
      containers:
        - name: mailing
          image: ezeedge/mailing:latest
          ports:
            - containerPort: 3000
---
# Service
apiVersion: v1
kind: Service
metadata: 
  name: mailing-srv
  namespace: mailing
spec:
  selector:
    app: mailing
  ports:
    - name: mailing
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
