infra/k8s/mailing2-depl .yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: mailing2
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailing2-depl
  namespace: mailing2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailing2
  template:
    metadata:
      labels:
        app: mailing2
    spec:
      containers:
        - name: mailing2
          image: ezeedge/mailing2:latest
          ports:
            - containerPort: 3000
---
# Service
apiVersion: v1
kind: Service
metadata: 
  name: mailing2-srv
  namespace: mailing2
spec:
  selector:
    app: mailing2
  ports:
    - name: mailing2
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
