infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.com
      http:
        paths:
          - path: /api/auth(/.*)?  # Mantenemos la expresión regular
            pathType: ImplementationSpecific  # Volvemos a ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
